# my_ws

./: .gitignore  .gitignore~  README.md  clean_repository.sh  update_lib.sh
classify_sdk/: CMakeLists.txt  package.xml
classify_sdk/launch/: launch.launch
classify_sdk/model/: default.urdf
classify_sdk/src/classify/: CMakeLists.txt  FeatureManager.h  boxEstimater.h  classifierSdk.cpp  classifierSdk.h  classify_node.cpp  drawing.h  lidarTerrianNode.cpp  multiClassifier.h  track.h
classify_sdk/src/cluster/: CMakeLists.txt  lidarCluster.h  lidarClusterNode.cpp  lidarTerrian.h
classify_sdk/svm_model/: traincarpedbkg.txt.model  traincarpedbkg.txt.range
data/: obd.txt  roi.txt
docs/: codingGuide.md  developInstruction.md  gitSmallTips.md  startToRun.md
label_tool/: CMakeLists.txt  package.xml
label_tool/data/: .gitignore
label_tool/launch/: feature.launch  label.launch
label_tool/scripts/: control_node4_0.py
label_tool/src/: CMakeLists.txt  ShapeEstimator.cpp  ShapeEstimator.h  example.cpp  featureExtract.cpp  featureExtract.h  featureExtract_node.cpp  track_label.cpp  track_label.h
lidar_classify/: CMakeLists.txt  package.xml
lidar_classify/config/: lidar_classify_default.rviz
lidar_classify/docs/: tracking_code_flow.md
lidar_classify/launch/: launchNoROI.launch  launchROI.launch  launchROI_xc.launch  launchRSlidar.launch  launchYanghao.launch  launchYanghao.launch~
lidar_classify/scripts/: control_node.py
lidar_classify/src/classify/: CMakeLists.txt  FeatureManager.cpp  ShapeEstimator.cpp  ShapeEstimator.h  TrackFilter.cpp  TrackFilter.h  boxEstimater.cpp  boxEstimater.h  classifier.cpp  classifySVM.cpp  classifySVM.h  classifyTrack.cpp  classifyTrack.h  drawing.cpp  drawing.h  svm_classify_node.cpp  svm_classify_roi_node.cpp  track.cpp  track.h  trackManager.cpp  trackManager.h  trainFileGenerate.cpp
lidar_classify/src/xgbtest/: CMakeLists.txt  boxEstimater.h  classifyWithXgboost.cpp  classifyWithXgboost.h  drawing.h  track.h  xgb_classify_node.cpp  xgbclassifyTrack.cpp  xgbclassifyTrack.h
lidar_classify/svm_model/: traincarpedbkg.txt.model
lidar_cluster/: CMakeLists.txt  package.xml
lidar_cluster/launch/: launch.launch  launchROI.launch
lidar_cluster/model/: default.urdf
lidar_cluster/nodes/: lidarClusterNode.cpp  lidarTerrianNode.cpp  lidarTerrianROI.cpp  roboClusterNode.cpp
lidar_cluster/src/: lidarCluster.cpp  lidarTerrian.cpp
lidar_fullscan/: CMakeLists.txt  package.xml
lidar_fullscan/scripts/: control_node.py  velodynepicmsg_test.py
lidar_fullscan/src/: CMakeLists.txt  convert_fullscan.h  fullscan_puber.cpp  modify_driver.cpp  modify_driver.h  myparam.h
lidar_msg/: CMakeLists.txt  package.xml
lidar_msg/msg/: cluster.msg  clusterArray.msg  terrian.msg
lidar_track/: CMakeLists.txt  package.xml
lidar_track/include/: Tracking.h  drawRviz.h  roboCluster.h
lidar_track/include/precision_tracking/: adh_tracker3d.h  alignment_evaluator.h  density_grid_2d_evaluator.h  density_grid_3d_evaluator.h  down_sampler.h  params.h  precision_tracker.h  track_manager.h  tracker.h
lidar_track/nodes/: lidarTrackNode.cpp
lidar_track/src/: Tracking.cpp  drawRviz.cpp  roboCluster.cpp
lidar_track/src/precision_tracking/: adh_tracker3d.cpp  alignment_evaluator.cpp  density_grid_2d_evaluator.cpp  density_grid_3d_evaluator.cpp  down_sampler.cpp  precision_tracker.cpp  sensor_specs.cpp  track_manager.cpp  tracker.cpp
velodyne/velodyne_driver/src/lib/: input.cc
